Add images and styling for users posts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,3 +42,15 @@
     TAGGED
   </a>
 </div>
+
+<div class="user-images">
+  <div class="wrapper">
+    <img src="https://cdn.shopify.com/s/files/1/0158/2436/products/michae-scott-boss_mug_1024x1024.jpg?v=1469559275">
+  </div>
+  <div class="wrapper">
+    <img src="your_image_url">
+  </div>
+  <div class="wrapper">
+    <img src="your_image_url">
+  </div>
+</div>
