--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -91,6 +91,7 @@ a.tab{
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 20px;
+
 .wrapper{
     width: 280px;
     height: 280px;
@@ -99,5 +100,40 @@ a.tab{
       width: 100%;
       border-radius: 4%;
     }
+  }
+}
+
+.user-edit-page{
+  display: flex;
+  margin-top: 60px;
+  min-height: 500px;
+
+  .actions{
+    width: 220px;
+    border: 1px solid #dbdbdb;
+  }
+  .details{
+    flex: 1;
+    border: 1px solid #dbdbdb;
+    border-left:none;
+  }
+}
+
+.actions{
+  width: 220px;
+  border: 1px solid #dbdbdb;
+.nav-link{
+    font-size: 14px;
+    background-color: white;
+    color: black;
+    border-radius: 0;
+    padding: 12px 0 12px 30px;
+    &:hover{
+      cursor: pointer;
+    }
+  }
+  .nav-pills .nav-link.active{
+    border-left: 2px solid;
+    font-weight: 600;
   }
 }
