--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,9 @@
     <div class="col-md-8 basic-info">
       <div class="user-wrapper">
         <h2 class="username">MGsputnik</h2>
-        <a class="edit-profile">
-          <button>Edit Profile</button>
-        </a>
+          <a class="edit-profile" href="<%= edit_user_path(current_user) %>">
+            <button>Edit Profile</button>
+          </a>
       </div>
       <ul class="posts">
         <li><span>12</span> posts</li>
